# confluent-kafka-local

./: .gitignore  Makefile  README.md  kafka_test-consume.py  kafka_test-produce.py  pyproject.toml
