[tool.poetry]
name = "kafka-python"
version = "0.1.0"
description = "Kafka-Python tutorial from https://towardsdatascience.com/kafka-python-explained-in-10-lines-of-code-800e3e07dad1"
authors = ["Fernando Abreu <49952773+nandoabreu@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
#kafka-python = "^2.0.2"
confluent-kafka = "^1.6.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
